
CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.10.0-alpha - 2017-05-
- changed PHP requirement to PHP 5.6+ and PHP 7+ (Thorsten)
- added LDAP configuration frontend (Thorsten)
- added configuration for enable/disable XML sitemap (Thorsten)
- added support for category images (Thorsten)
- added support for categories on startpage (Thorsten)
- improved REST/JSON API including login (Thorsten)
- improved sticky records (Thorsten)
- updated bundled Symfony ClassLoader to version 2.7.16 (Thorsten)
- updated bundled SwiftMailer to version 5.4.3 (Thorsten)
- updated bundled Elasticsearch client to version 2.2.1 (Thorsten)
- updated bundled Font Awesome to version 4.6.3 (Thorsten)
- updated bundled jQuery to version 3.1.0 (Thorsten)
- updated bundled jQuery datePicker plugin to version 1.6.4 (Thorsten)
- updated bundled Typeahead.js to version 0.11.1 (Thorsten)
- updated bundled Handlebars to version 4.0.5 (Thorsten)
- updated bundled HighlightJS to version 8.9.1 (Thorsten)
- updated bundled Mermaid to version 6.0.0 (Thorsten)
- updated bundled jQuery Sparklines to version 2.3.2 (Thorsten)
- removed Bower, now using NPM only (Thorsten)

Version 2.9.7 - 2017-04-02
- fixed stored XSS vulnerability (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.6 - 2017-01-27
- fixed possible arbitrary PHP code execution (Thorsten)
- ready for PHP 7.1 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.5 - 2016-08-31
- fixed minor bugs (Thorsten, Matt Brennan)

Version 2.9.4 - 2016-08-02
- deactivated debug mode (Thorsten)
- updated bundled TinyMCE to version 4.4.1 (Thorsten)
- updated bundled Bootstrap to version 3.3.7 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.3 - 2016-08-01
- fixed minor bugs (Thorsten)

Version 2.9.2 - 2016-07-05
- updated bundled phpseclib to version 2.0.2 (Thorsten)
- updated bundled TinyMCE to version 4.4.0 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.1 - 2016-05-31