@@ -13,7 +13,7 @@
     "jquery": "^3.1.0",
     "jquery-sparkline": "^2.3.2",
     "mermaid": "^6.0.0",
-    "tinymce": "^4.4.1",
+    "tinymce": "^4.6.3",
     "typeahead.js": "^0.11.1"
   },
   "devDependencies": {
