@@ -1,0 +1,22 @@
+<div class="slider-container">
+  <div class="menu">
+    <label for="slide-dot-1"></label>
+    <label for="slide-dot-2"></label>
+    <label for="slide-dot-3"></label>
+  </div>
+
+  <input id="slide-dot-1" type="radio" name="slides" checked>
+  <div class="slide">
+    IMAGE
+  </div>
+
+  <input id="slide-dot-2" type="radio" name="slides">
+  <div class="slide">
+    IMAGE
+  </div>
+
+  <input id="slide-dot-3" type="radio" name="slides">
+  <div class="slide">
+    IMAGE
+  </div>
+</div>
